--- a/index.html
+++ b/index.html
@@ -4,22 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
-        <title>Basic Usage</title>
+        <title>Phạm Ngọc Linh - 1212202</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
         <link rel='stylesheet prefetch' href='css/angular-material.min.css'>
         <link rel='stylesheet prefetch' href='css/bootstrap.min.css'>
         <link rel="stylesheet" href="css/material-icons.css">
         <link rel="stylesheet" href="css/style.css">
-
-
-
-
     </head>
 
     <body>
 
         <div ng-controller="AppCtrl"  class="toolbardemoBasicUsage" ng-app="MyApp">
-
             <md-toolbar  class="md-hue-2  main-nav l-pinned-top l-layer-5">
                 <nav>
                     <h1>
@@ -78,18 +73,18 @@
                             <img src="imgs/search.svg"/>
                         </md-button>
                         </li>
-                    </ul> </nav>
+                    </ul> 
+                </nav>
 
             </md-toolbar>
 
 
 
-            <div class="is-centered container-fluid"  >
+            <div class="is-centered"  >
 
 
-                <div class="row">
+                <div class="container-fluid">
                     <div class="col-md-8"  >
-
                         <div class="card-container" >
 
                             <md-card>
@@ -106,7 +101,7 @@
 
                                     </div>
                                     <div class="main-info-LR" >
-                                        <span>{{info.follower}}</span><div>follower</div>
+                                        <span>{{info.follower}}</span><div>followers</div>
                                     </div>
                                     <div class="main-fab">
                                         <md-button class="md-fab md-primary md-hue-2">
@@ -155,9 +150,12 @@
                                                     <md-divider ng-if="!$last"></md-divider>
                                                 </div>
 
-                                                <div class="tab-content-title-container">
 
-                                                    <i class="material-icons icon-dark-color">&#xEB3F;</i>
+
+
+
+                                                <div class="tab-content-title-container">
+                                                    <i class="material-icons icon-dark-color">&#xE8FC;</i>
                                                     <span >Experience</span>
                                                 </div>
 
@@ -172,29 +170,85 @@
                                                     </div>
                                                     <div class="tab-content-text">
                                                         <p>{{item.summary}}</p>
-
-
                                                     </div>
 
-                                                    <div   ng-repeat="med in item.media" >
-
-                                                        <div ng-class=" {'visible':item.media.length > 0}"  class="media-data l-left">
-                                                            <div class="media-image thumbnail" style="background-image: url({{med.img}});">
-                                                                <img class="thumbnail" src="{{med.img}}"/>
+                                                    <div   ng-repeat="med in item.media" ng-class="(item.media.length > 0) ? 'visible' : 'non-visible'">
+                                                        <div ng-class="$index % 5 < 2 ? 'media-data' : 'media-data-fix'">
+                                                            <div class="media-data-container">
+                                                                <a href="#">
+                                                                    <div class="media-image thumbnail" style="background-image: url({{med.img}});">
+                                                                        <img class="thumbnail" src="{{med.img}}"/>
+                                                                    </div>
+                                                                    <div class="media-desc"><p class="description">{{med.caption}}</p></div>
+                                                                </a>
                                                             </div>
-                                                            <div class="media-desc"><p class="description">{{med.caption}}</p></div>
                                                         </div>
                                                     </div>
+                                                </div>
+                                                <md-divider ng-if="!$last" class="clear"></md-divider>
 
 
+
+                                                <div class="tab-content-title-container ">
+                                                    <i class="material-icons icon-dark-color">&#xE3B8;</i>
+                                                    <span >Skill</span>
                                                 </div>
 
+                                                <div class="clear skill-title">Top Skill</div>
+                                                <div ng-repeat="item in skillList.skill" class="skill-btn-container clear">
+                                                    <div class="skill-btn-left">{{item.count}}</div>
+                                                    <div class="skill-btn-right">{{item.desc}}</div>
+                                                </div>
+                                                <div class="clear skill-title clear">Jeff also knows about...</div>
+
+
+                                                <div ng-repeat="item in skillList.know" class="skill-btn-container l-left">
+                                                    <div class="skill-btn-left">{{item.count}}</div>
+                                                    <div class="skill-btn-right">{{item.desc}}</div>
+                                                </div>
+                                                <div class="skill-container clear"></div>
                                                 <md-divider ng-if="!$last" class="clear"></md-divider>
 
 
 
 
+                                                <div class="tab-content-title-container ">
+                                                    <i class="material-icons icon-dark-color">&#xE80C;</i>
+                                                    <span >Education</span>
+                                                </div>
 
+                                                <div ng-repeat="item in educationList" class="tab-content-exp-header">
+                                                    <img class="l-right img-exp-header" src="{{item.img}}"/>
+                                                    <div class="text-exp-header l-left">
+                                                        <span class="normal-text" >{{item.name}}</span>
+                                                        <div class="text-exp-header-sub" >{{item.subject}}</div>
+                                                        <div class="text-exp-header-sub-2" >{{item.time}}</div>
+                                                    </div>
+                                                </div>
+                                                <div class="skill-container clear"></div>
+                                                <md-divider ng-if="!$last" class="clear"></md-divider>
+                                                <div class="tab-content-title-container ">
+                                                    <i class="material-icons icon-dark-color">&#xE0D9;</i>
+                                                    <span >Volunteer Experience & Causes</span>
+                                                </div>
+
+                                                <div class="tab-content-exp-header">
+                                                    <div class="text-exp-header">
+                                                        <span class="normal-text">Causes Jeff cares about:</span>
+                                                    </div>
+                                                </div>
+
+                                                <ul class="text-exp-header-sub">
+                                                    <li ng-repeat="item in volunteerList.about">{{item.text}}</li>
+                                                </ul> 
+                                                <div class="tab-content-exp-header">
+                                                    <div class="text-exp-header">
+                                                        <span class="normal-text">Organizations Jeff supports:</span>
+                                                    </div>
+                                                </div>
+                                                <ul class="text-exp-header-sub">
+                                                    <li ng-repeat="item in volunteerList.support"><a href="#" >{{item.text}}</a></li>
+                                                </ul> 
 
 
 
@@ -256,7 +310,27 @@
 
 
                     </div>
-                    <div class="col-md-4" >Row 1: Itwdawd awd awd awdawda wda wd awdawd awda wdawd a wda w em 2</div>
+                    <div class="col-md-4" >
+                        <md-card>
+                            <md-card-title>
+                                <span class="right-card-head">People also viewed</span>
+                            </md-card-title>
+                            <md-content >
+                                <md-list flex>
+                                    <md-list-item class="md-3-line" ng-repeat="item in alsoList" ng-click="null">
+                                        <img ng-src="{{item.img}}" class="md-avatar">
+                                        <div class="md-list-item-text" layout="column">
+                                            <h3>{{item.name}}</h3>
+                                            <h4>{{item.job}}</h4>
+                                            
+                                        </div>
+                                        <md-divider md-inset ng-if="!$last"></md-divider>
+                                    </md-list-item>
+                                </md-list>
+                            </md-content>
+
+                        </md-card>
+                    </div>
                 </div>
 
             </div>
