--- a/js/edit/volunteer.html
+++ b/js/edit/volunteer.html
@@ -33,7 +33,10 @@
         <md-dialog-actions layout="row">
             <md-button ng-click="cancel()" >Cancel</md-button>
             <span flex></span>
+		 <md-button ng-click="check(dialogData) ? (dialogData = [{}]) : dialogData.push({})" >Add A Volunteer</md-button>
+			<span flex></span>
             <md-button ng-disabled="!mF.$valid" ng-click="onOK(dialogData)">OK</md-button>
+			
 
         </md-dialog-actions>
     </form>
